--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                 </div>
                 <div>
                     <h4>Explore More about this project</h4>
-                    <div> <a href="/"><i class="fa-solid fa-link"></i> View on Github</a> </div>
+                    <div> <a href="https://github.com/kirandikshit124/Project2-Portfolio.git">
+                        <i class="fa-solid fa-link"></i> View on Github</a> </div>
                 </div>
         </section>
     </main>
